# shell-network-game

./: 001.save  Dockerfile  README.md  cli.py  main.py  pip.conf  pyproject.toml  requirements.txt  run.bat
assets/: awake.json
commands/: base.py  status.py  vim.py
game/: game_base.py
nkgame/: 001.save  cli.py  main.py
nkgame/commands/: __init__.py  base.py  chatgpt.py  console.py  status.py
nkgame/game/: game_base.py  player.py
nkgame/pb/: game_status.proto  game_status_pb2.py  game_status_pb2.pyi
pb/: game_status_pb2.py
