[tool.poetry]
name = "nk-game"
version = "0.1.0"
description = ""
authors = ["wei <molixianggu@gmail.com>"]
license = "MIT"
packages = [{include = "nkgame"}]

[tool.poetry.dependencies]
python = "^3.8"
textual = "^0.1.18"
pyfiglet = "^0.8.post1"
rich = "^12.5.1"
textual-inputs = "^0.2.6"
fast-autocomplete = "^0.9.0"
protobuf = "^4.21.4"
prompt-toolkit = "^3.0.30"
windows-curses = { version = "^2.3.0", markers = "sys_platform == 'win32'" }
pyvim = "^3.0.3"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
